Show scaled fractions with their displayed value
# 1.02.09 (73585) Oct 25, 2013
Show scale factor for numeric values in matching game
Track left and right representation type for matching game
Fixed: matching game was reporting leftNumerator/leftNumerator
fixed number index for build a fraction levels
# 1.02.08 (73577) Oct 25, 2013
# 1.02.07 (73575) Oct 25, 2013
Many more updates for fractions study
# 1.02.06 (73560) Oct 23, 2013
# 1.02.05 (73558) Oct 23, 2013
# 1.02.04 (73503) Oct 21, 2013
Started november 2013 research study
# 1.02.03 (71811) Jan 19, 2013
Research Study: Fraction Lab Tab: Made the rectangle the default container in the play area
# 1.02.02 (71290) Dec 13, 2012
Made bars default for research application
# 1.02.01 (71282) Dec 12, 2012
# 1.02.00 (69269) Oct 17, 2012
> Fraction Matcher: Added a reset all button to the level selection screen
# 1.01.38 (69254) Oct 16, 2012
Tab 1: Further increased card size for higher levels so that the "10" text would fit with default mac os x font
# 1.01.37 (69252) Oct 16, 2012
Tab 1: Increased card size for higher levels so that the "10" text would fit with default mac os x font
# 1.01.36 (69181) Oct 12, 2012
Tab 2: Mixed numbers level 9-10: Whenever a solution has shapes with 1/2, and 1/3 it must also have a 1/6 to avoid the need for the user to solve a common denominator type problem
# 1.01.35 (69162) Oct 12, 2012
Tab 2: Mixed numbers level 9-10: Fixed height of the 1/1 cube to match 1/3 slices or 9/9 diced cubes
Tab 2: Mixed numbers level 9-10: show 1/3 horizontally or vertically sliced cubes instead of 1/4 diced cubes
Tab 2: Mixed numbers level 9-10: removed pyramids
# 1.01.34 (69158) Oct 12, 2012
Tab 2: Mixed numbers level 9-10: increased diversity and constrain solution types
# 1.01.33 (69154) Oct 12, 2012
# 1.01.32 (69152) Oct 12, 2012
# 1.01.31 (69103) Oct 11, 2012